<resources>
    <string name="app_name">Special Calculator</string>
    <string name="htoeList">ထိုးထားတဲ့ စာရင်း</string>
    <string name="poutList">ပေါက်တဲ့သူ စာရင်း</string>
    <string name="hote">ထိုးမယ်</string>
    <string name="htwetList">ထွက်တဲ့စာရင်း</string>
    <string name="totalList">အားလုံးပေါင်း</string>
    <string name="toolbar_text">POS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
